added the form grid

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 <title>Arizona</title>
 <link rel="stylesheet" type="text/css" href="css/arizona.css">
 <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Oswald:normal,bold" rel="stylesheet">
+<script src="https://player.vimeo.com/api/player.js"></script>
 <script src="arizona.js"></script>
+
 </head>
 
-<body>
+<body >
 
     <div id="map"></div>
     <div class="title"><span class="futura-18">Mesa, </span><span  class="georgia-18"><i>Arizona</i></span></div>
@@ -110,27 +112,57 @@
  </div>
 </div>
    <div class="rectangle_above" id="rectangle_above_id"></div>
+   <form action="">
    <div  class="form_class" id="form_id">
      <div class="form_left" id="form_left_id">
-       1/10
-     </div>
-     <div class="form_right" >
-       <div id="form_question_id">Qual é a sua idade?</div><br><br>
-      <form action="">
-          <input type="checkbox" name="checkboxG1" id="checkboxG1" class="css-checkbox" />
-          <label for="checkboxG1" class="css-label" id="label1">menos de 25 anos</label><br><br>
-          <input type="checkbox" name="checkboxG2" id="checkboxG2" class="css-checkbox" />
-          <label for="checkboxG2" class="css-label" id="label2">de 25 a 40 anos</label><br><br>
-          <input type="checkbox" name="checkboxG3" id="checkboxG3" class="css-checkbox" />
-          <label for="checkboxG3" class="css-label" id="label3">de 41 a 55 anos</label><br><br>
-          <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-          <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
-      </form>
-      <div class="confirma" onclick="confirm();" ><br>CONFIRMA >></div>
+       1/10<br>
+       Qual é a sua idade?
      </div>
 
+     <div class="form_right_top" >
+          <input type="checkbox" name="checkboxG1" id="checkboxG1" class="css-checkbox" />
+          <label for="checkboxG1" class="css-label" id="label1">menos de 25 anos</label>
+    </div>
+    <div class="form_right" >
+          <input type="checkbox" name="checkboxG2" id="checkboxG2" class="css-checkbox" />
+          <label for="checkboxG2" class="css-label" id="label2">de 25 a 40 anos</label>
+    </div>
+    <div class="form_right" >
+          <input type="checkbox" name="checkboxG3" id="checkboxG3" class="css-checkbox" />
+          <label for="checkboxG3" class="css-label" id="label3">de 41 a 55 anos</label>
+    </div>
+    <div class="form_right" >
+          <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
+          <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+    </div>
+    <div class="form_right" >
+          <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
+          <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+    </div>
+    <div class="form_right" >
+          <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
+          <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+    </div>
+    <div class="form_right" >
+          <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
+          <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+    </div>
+    <div class="form_right" >
+          <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
+          <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+    </div>
+    <div class="form_right" >
+          <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
+          <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+    </div>
+
+    <div class="confirma" onclick="confirm();" >CONFIRMA >></div>
+     </div>
+
+
    </div>
-   <div class="screenplay" id="screenplay_id">
+  </form>
+     <div class="screenplay" id="screenplay_id">
      <div class="screenplay_wrapper_left">
        <div class="screenplay_header">BEM VINDO A MESA<br><br><hr></div>
        <div class="screenplay_content">Quis autem vel eum iure reprehenderit
