--- a/index.html
+++ b/index.html
@@ -1,190 +1,116 @@
-
 <!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
 <title>Arizona</title>
-<link rel="stylesheet" type="text/css" href="css/arizona.css">
-<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Oswald:normal,bold" rel="stylesheet">
-<script src="https://player.vimeo.com/api/player.js"></script>
-<script src="arizona.js"></script>
+<link rel="stylesheet" type="text/css" href="css/index.css">
+<link href="https://fonts.googleapis.com/css?family=family=Heebo|Droid+Serif|Oswald:normal,bold" rel="stylesheet">
 
+<script src="form.js"></script>
 </head>
+<body>
 
-<body >
-
-    <div id="map"></div>
-    <div class="title"><span class="futura-18">Mesa, </span><span  class="georgia-18"><i>Arizona</i></span></div>
-    <div class="place_name" id="place_name_id"><span class="futura-18">Skyland </span><span  class="georgia-18"><i>highschool</i></span></div>
-    <div class="place" id="highschool">Content for  class "place" id "highschool" Goes Here</div>
-    <!-- used for testing still image as thumbnail. delete in next version
-    <img class="skyland_highschool" id="skyland_highschool_img_id" src="images/skyland_highschool.png" ></img>
-    -->
-    <div class="wrapper_wrapper" id="wrapper_wrapper_casa_1_id">
-      <div class="video_wrapper">
-        <iframe
-         src="https://player.vimeo.com/video/226354540?title=0&byline=0&background=1"
-         frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-     </div>
-   </div>
-   <div class="wrapper_wrapper" id="wrapper_wrapper_casa_2_id">
-     <div class="video_wrapper">
-       <iframe
-        src="https://player.vimeo.com/video/226353399?title=0&byline=0&background=1"
-        frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<form action="">
+  <div class="grid-container">
+    <div class="form-header"> <span class="futura-18">Mesa, </span><span  class="georgia-18"><i>Arizona</i></span></div>
+    <div class="form-left"><span id="question-count" class="futura-22-bold">1</span>
+      <span class="futura-22-bold ">/ 9</span><br>
+        <span id="question" class="futura-22-bold ">Qual é a sua idade?</span>
+</div>
+    <div class="form-right" id="form-right-0">
+          <input type="checkbox" name="checkboxG2" id="checkboxG2" class="css-checkbox" />
+          <label for="checkboxG2" class="css-label" id="label0">de 25 a 40 anos</label>
     </div>
-  </div>
-  <div class="wrapper_wrapper" id="wrapper_wrapper_casa_3_id">
-    <div class="video_wrapper">
-      <iframe
-       src="https://player.vimeo.com/video/226353447?title=0&byline=0&background=1"
-       frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-   </div>
- </div>
- <div class="wrapper_wrapper" id="wrapper_wrapper_casa_4_id">
-   <div class="video_wrapper">
-     <iframe
-      src="https://player.vimeo.com/video/226353387?title=0&byline=0&background=1"
-      frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  </div>
-</div>
-<div class="wrapper_wrapper" id="wrapper_wrapper_casa_5_id">
-  <div class="video_wrapper">
-    <iframe
-     src="https://player.vimeo.com/video/226353434?title=0&byline=0&background=1"
-     frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
- </div>
-</div>
-<div class="wrapper_wrapper" id="wrapper_wrapper_casa_6_id">
-  <div class="video_wrapper">
-    <iframe
-     src="https://player.vimeo.com/video/226368841?title=0&byline=0&background=1"
-     frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
- </div>
-</div>
-<div class="wrapper_wrapper" id="wrapper_wrapper_igrejas_id">
-  <div class="video_wrapper">
-    <iframe
-     src="https://player.vimeo.com/video/226354563?title=0&byline=0&background=1"
-     frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
- </div>
-</div>
-   <div class="wrapper_wrapper" id="wrapper_wrapper_school_id">
-     <div class="video_wrapper">
-       <iframe
-        src="https://player.vimeo.com/video/225001757?title=0&byline=0&background=1"
-        frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <div class="form-right" id="form-right-1">
+          <input type="checkbox" name="checkboxG2" id="checkboxG2" class="css-checkbox" />
+          <label for="checkboxG2" class="css-label" id="label1">de 25 a 40 anos</label>
     </div>
-  </div>
-    <div class="wrapper_wrapper" id="wrapper_wrapper_shootingrange_id">
-      <div class="video_wrapper">
-        <iframe
-         src="https://player.vimeo.com/video/226357094?title=0&byline=0&background=1"
-         frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-     </div>
-   </div>
-   <div class="wrapper_wrapper" id="wrapper_wrapper_gym_id">
-     <div class="video_wrapper">
-       <iframe
-        src="https://player.vimeo.com/video/225001970?title=0&byline=0&background=1"
-        frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    </div>
-  </div>
-  <div class="wrapper_wrapper" id="wrapper_wrapper_retirement_id">
-    <div class="video_wrapper">
-      <iframe
-       src="https://player.vimeo.com/video/225002617?title=0&byline=0&background=1"
-       frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-   </div>
- </div>
- <div class="wrapper_wrapper" id="wrapper_wrapper_rodeo_id">
-   <div class="video_wrapper">
-     <iframe
-      src="https://player.vimeo.com/video/226364472?title=0&byline=0&background=1"
-      frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  </div>
-</div>
-<div class="wrapper_wrapper" id="wrapper_wrapper_westernpark_id">
-  <div class="video_wrapper">
-    <iframe
-     src="https://player.vimeo.com/video/226354643?title=0&byline=0&background=1"
-     frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
- </div>
-</div>
-   <div class="rectangle_above" id="rectangle_above_id"></div>
-   <form action="">
-   <div  class="form_class" id="form_id">
-     <div class="form_left" id="form_left_id">
-       1/10<br>
-       Qual é a sua idade?
-     </div>
-
-     <div class="form_right_top" >
-          <input type="checkbox" name="checkboxG1" id="checkboxG1" class="css-checkbox" />
-          <label for="checkboxG1" class="css-label" id="label1">menos de 25 anos</label>
-    </div>
-    <div class="form_right" >
+    <div class="form-right" id="form-right-2">
           <input type="checkbox" name="checkboxG2" id="checkboxG2" class="css-checkbox" />
           <label for="checkboxG2" class="css-label" id="label2">de 25 a 40 anos</label>
     </div>
-    <div class="form_right" >
+    <div class="form-right" id="form-right-3">
           <input type="checkbox" name="checkboxG3" id="checkboxG3" class="css-checkbox" />
           <label for="checkboxG3" class="css-label" id="label3">de 41 a 55 anos</label>
     </div>
-    <div class="form_right" >
+    <div class="form-right" id="form-right-4">
           <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
           <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
     </div>
-    <div class="form_right" >
+    <div class="form-right" id="form-right-5">
           <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-          <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+          <label for="checkboxG4" class="css-label" id="label5">mais de 55 anos</label>
     </div>
-    <div class="form_right" >
+    <div class="form-right" id="form-right-6">
           <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-          <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+          <label for="checkboxG4" class="css-label" id="label6">mais de 55 anos</label>
     </div>
-    <div class="form_right" >
+    <div class="form-right" id="form-right-7">
           <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-          <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+          <label for="checkboxG4" class="css-label" id="label7">mais de 55 anos</label>
     </div>
-    <div class="form_right" >
+    <div class="form-right" id="form-right-8">
           <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-          <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
-    </div>
-    <div class="form_right" >
-          <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-          <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+          <label for="checkboxG4" class="css-label" id="label8">mais de 55 anos</label>
     </div>
 
-    <div class="confirma" onclick="confirm();" >CONFIRMA >></div>
+
+    <div class="confirma" onclick="confirm();" ><span class="futura-18-bold">CONFIRMA >></span></div>
      </div>
 
+  </div>
 
-   </div>
-  </form>
-     <div class="screenplay" id="screenplay_id">
-     <div class="screenplay_wrapper_left">
-       <div class="screenplay_header">BEM VINDO A MESA<br><br><hr></div>
-       <div class="screenplay_content">Quis autem vel eum iure reprehenderit
-         qui in ea voluptate velit esse quam nihil molestiae consequatur,
-         vel illum qui dolorem eum fugiat quo voluptas nulla pariatur</div>
-         <div class="screenplay_screenplay"<br><br><hr>ROTEIRO<br>
-           1 Skyland highschool<br>
-           2 Casa de Kirsten Lax<br>
-           3 Western Park<br>
-           4 Academia de Ryan Ehler<br>
-           5 Fronteira do México<br>
-         </div>
-     </div>
-     <div class="screenplay_title">ROTEIRO</div>
-     <div class="screenplay_close" id="screenplay_close_id" onclick="screenplay_close();">
-       x
-     </div>
-   </div>
-   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJ1BJ5R6eyVAvq0oAyjkCPW46uS4e6MnI&callback=initMap">
-   </script>
+<!--
+<div  class="form_class" id="form_id">
+  <div class="form_left" id="form_left_id">
+    1/10<br>
+    Qual é a sua idade?
+  </div>
+
+  <div class="form-right_top" >
+       <input type="checkbox" name="checkboxG1" id="checkboxG1" class="css-checkbox" />
+       <label for="checkboxG1" class="css-label" id="label1">menos de 25 anos</label>
+ </div>
+ <div class="form-right" >
+       <input type="checkbox" name="checkboxG2" id="checkboxG2" class="css-checkbox" />
+       <label for="checkboxG2" class="css-label" id="label2">de 25 a 40 anos</label>
+ </div>
+ <div class="form-right" >
+       <input type="checkbox" name="checkboxG3" id="checkboxG3" class="css-checkbox" />
+       <label for="checkboxG3" class="css-label" id="label3">de 41 a 55 anos</label>
+ </div>
+ <div class="form-right" >
+       <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
+       <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+ </div>
+ <div class="form-right" >
+       <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
+       <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+ </div>
+ <div class="form-right" >
+       <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
+       <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+ </div>
+ <div class="form-right" >
+       <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
+       <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+ </div>
+ <div class="form-right" >
+       <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
+       <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+ </div>
+ <div class="form-right" >
+       <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
+       <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
+ </div>
+
+ <div class="confirma" onclick="confirm();" >CONFIRMA >></div>
+  </div>
 
 
+</div>
+-->
+
+</form>
 </body>
 </html>
