screenplay bar to the left

--- a/map.html
+++ b/map.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>Arizona</title>
-<link rel="stylesheet" type="text/css" href="css/arizona.css">
+<link rel="stylesheet" type="text/css" href="css/map.css">
 <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Oswald:normal,bold" rel="stylesheet">
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="arizona.js"></script>
@@ -126,9 +126,8 @@
            5 Fronteira do México<br>
          </div>
      </div>
-     <div class="screenplay_title">ROTEIRO</div>
-     <div class="screenplay_close" id="screenplay_close_id" onclick="screenplay_close();">
-       x
+     <div class="screenplay_title"><img src="images/menuscreenplay.png" onclick="screenplay_close();"></div>
+
      </div>
    </div>
    <script async defer
