added div incidentes de fronteira

--- a/map.html
+++ b/map.html
@@ -133,7 +133,6 @@
 </div>
 <div class="wrapper_wrapper" id="wrapper_wrapper_westernpark_id">
   <div class="video_title">Western Park</div>
-
   <div class="video_wrapper">
     <iframe
      src="https://player.vimeo.com/video/226354643?title=0&byline=0&background=1"
@@ -141,7 +140,10 @@
  </div>
  <div class="video_arrow"><img src="images/seta_video.png"></div>
 </div>
-
+<div class="wrapper_wrapper" id="wrapper_wrapper_fronteira">
+  <div class="video_title">Incidentes de Fronteira</div>
+  <div class="video_arrow"><img src="images/seta_video.png"></div>
+</div>
      <div class="screenplay" id="screenplay_id">
      <div class="screenplay_wrapper_left">
        <div class="screenplay_header">BEM VINDO A MESA<br><br><hr></div>
