added video fronteira

--- a/map.html
+++ b/map.html
@@ -139,9 +139,14 @@
  </div>
  <div class="video_arrow"><img src="images/seta_video.png"></div>
 </div>
-<div class="wrapper_wrapper" id="wrapper_wrapper_fronteira">
-  <div class="video_title">Incidentes de Fronteira</div>
-  <div class="video_arrow"><img src="images/seta_video.png"></div>
+<div class="wrapper_seta_fronteira" id="wrapper_wrapper_seta_fronteira_id">
+  <div class="fronteira_title"><span class="futura-18">Fronteira do México</span></div>
+  <div class="fronteira_arrow"><img src="images/seta_fronteira.png"></div>
+</div>
+<div class="wrapper_fronteira" id="wrapper_wrapper_fronteira_id">
+<iframe src="https://player.vimeo.com/video/226354838?autoplay=1&title=0&byline=0&portrait=0"
+width="800" height="340" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
 </div>
      <div class="screenplay" id="screenplay_id">
      <div class="screenplay_wrapper_left">
