--- a/index.html
+++ b/index.html
@@ -13,45 +13,45 @@
 <form action="">
   <div class="grid-container">
     <div class="form-header"> <span class="futura-18">Mesa, </span><span  class="georgia-18"><i>Arizona</i></span></div>
-    <div class="form-left"><span id="question-count" class="futura-22-bold">1</span>
+    <div class="form-left" id="form-left-0"><span id="question-count" class="futura-22-bold">1</span>
       <span class="futura-22-bold ">/ 9</span><br>
         <span id="question" class="futura-22-bold ">Qual é a sua idade?</span>
 </div>
     <div class="form-right" id="form-right-0">
-          <input type="checkbox" name="checkboxG2" id="checkboxG2" class="css-checkbox" />
-          <label for="checkboxG2" class="css-label" id="label0">de 25 a 40 anos</label>
+          <input type="checkbox"  id="checkboxG0" class="css-checkbox" onclick="cleanForm(0);" />
+          <label for="checkboxG0" class="css-label" id="label0">Até 25 anos</label>
     </div>
     <div class="form-right" id="form-right-1">
-          <input type="checkbox" name="checkboxG2" id="checkboxG2" class="css-checkbox" />
-          <label for="checkboxG2" class="css-label" id="label1">de 25 a 40 anos</label>
+          <input type="checkbox"  id="checkboxG1" class="css-checkbox" onclick="cleanForm(1);" />
+          <label for="checkboxG1" class="css-label" id="label1">de 25 a 40 anos</label>
     </div>
     <div class="form-right" id="form-right-2">
-          <input type="checkbox" name="checkboxG2" id="checkboxG2" class="css-checkbox" />
-          <label for="checkboxG2" class="css-label" id="label2">de 25 a 40 anos</label>
+          <input type="checkbox"  id="checkboxG2" class="css-checkbox" onclick="cleanForm(2);" />
+          <label for="checkboxG2" class="css-label" id="label2">de 41 a 55 anos</label>
     </div>
     <div class="form-right" id="form-right-3">
-          <input type="checkbox" name="checkboxG3" id="checkboxG3" class="css-checkbox" />
-          <label for="checkboxG3" class="css-label" id="label3">de 41 a 55 anos</label>
+          <input type="checkbox"  id="checkboxG3" class="css-checkbox" onclick="cleanForm(3);" />
+          <label for="checkboxG3" class="css-label" id="label3">Mais de 55 anos</label>
     </div>
-    <div class="form-right" id="form-right-4">
-          <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
+    <div class="form-right" id="form-right-4" style="display:none">
+          <input type="checkbox"  id="checkboxG4" class="css-checkbox" onclick="cleanForm(4);" />
           <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
     </div>
-    <div class="form-right" id="form-right-5">
-          <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-          <label for="checkboxG4" class="css-label" id="label5">mais de 55 anos</label>
+    <div class="form-right" id="form-right-5" style="display:none">
+          <input type="checkbox"  id="checkboxG5" class="css-checkbox" onclick="cleanForm(5);" />
+          <label for="checkboxG5" class="css-label" id="label5">mais de 55 anos</label>
     </div>
-    <div class="form-right" id="form-right-6">
-          <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-          <label for="checkboxG4" class="css-label" id="label6">mais de 55 anos</label>
+    <div class="form-right" id="form-right-6" style="display:none">
+          <input type="checkbox"  id="checkboxG6" class="css-checkbox" onclick="cleanForm(6);" />
+          <label for="checkboxG6" class="css-label" id="label6">mais de 55 anos</label>
     </div>
-    <div class="form-right" id="form-right-7">
-          <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-          <label for="checkboxG4" class="css-label" id="label7">mais de 55 anos</label>
+    <div class="form-right" id="form-right-7" style="display:none">
+          <input type="checkbox"  id="checkboxG7" class="css-checkbox" onclick="cleanForm(7);" />
+          <label for="checkboxG7" class="css-label" id="label7">mais de 55 anos</label>
     </div>
-    <div class="form-right" id="form-right-8">
-          <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-          <label for="checkboxG4" class="css-label" id="label8">mais de 55 anos</label>
+    <div class="form-right" id="form-right-8" style="display:none">
+          <input type="checkbox" id="checkboxG8" class="css-checkbox" onclick="cleanForm(8);" />
+          <label for="checkboxG8" class="css-label" id="label8">mais de 55 anooos</label>
     </div>
 
 
