--- a/map.html
+++ b/map.html
@@ -19,131 +19,16 @@
     <!-- used for testing still image as thumbnail. delete in next version
     <img class="skyland_highschool" id="skyland_highschool_img_id" src="images/skyland_highschool.png" ></img>
     -->
-    <div class="wrapper_wrapper" id="wrapper_wrapper_casa_1_id">
-      <div class="video_title">Casa dos Hanny</div>
-      <div class="video_wrapper">
-        <iframe
-         src="https://player.vimeo.com/video/226354540?title=0&byline=0&background=1"
-         frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-     </div>
-     <div class="video_arrow"><img src="images/seta_video.png"></div>
-   </div>
-   <div class="wrapper_wrapper" id="wrapper_wrapper_casa_2_id">
-     <div class="video_title">Casa do Corbin</div>
-     <div class="video_wrapper">
-       <iframe
-        src="https://player.vimeo.com/video/226353399?title=0&byline=0&background=1"
-        frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    </div>
-    <div class="video_arrow"><img src="images/seta_video.png"></div>
-  </div>
-  <div class="wrapper_wrapper" id="wrapper_wrapper_casa_3_id">
-    <div class="video_title">Casa da Kristen</div>
-    <div class="video_wrapper">
-      <iframe
-       src="https://player.vimeo.com/video/226353447?title=0&byline=0&background=1"
-       frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-   </div>
-   <div class="video_arrow"><img src="images/seta_video.png"></div>
- </div>
- <div class="wrapper_wrapper" id="wrapper_wrapper_casa_4_id">
-   <div class="video_title">Casa da Cait</div>
-   <div class="video_wrapper">
-     <iframe
-      src="https://player.vimeo.com/video/226353387?title=0&byline=0&background=1"
-      frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  </div>
-  <div class="video_arrow"><img src="images/seta_video.png"></div>
-</div>
-<div class="wrapper_wrapper" id="wrapper_wrapper_casa_5_id">
-  <div class="video_title">Casa dos Casillas</div>
-  <div class="video_wrapper">
-    <iframe
-     src="https://player.vimeo.com/video/226353434?title=0&byline=0&background=1"
-     frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
- </div>
- <div class="video_arrow"><img src="images/seta_video.png"></div>
-</div>
-<div class="wrapper_wrapper" id="wrapper_wrapper_casa_6_id">
-  <div class="video_title">Casa da Jan</div>
-  <div class="video_wrapper">
-    <iframe
-     src="https://player.vimeo.com/video/226368841?title=0&byline=0&background=1"
-     frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
- </div>
- <div class="video_arrow"><img src="images/seta_video.png"></div>
-</div>
-<div class="wrapper_wrapper" id="wrapper_wrapper_igrejas_id">
-  <div class="video_title">Tour das igrejas</div>
-  <div class="video_wrapper">
-    <iframe
-     src="https://player.vimeo.com/video/226354563?title=0&byline=0&background=1"
-     frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
- </div>
- <div class="video_arrow"><img src="images/seta_video.png"></div>
-</div>
-<div class="wrapper_wrapper" id="wrapper_wrapper_volta_id">
-  <div class="video_title">Volta por Mesa</div>
-  <div class="video_wrapper">
-    <iframe
-     src="https://player.vimeo.com/video/253042771?title=0&byline=0&background=1"
-     frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
- </div>
- <div class="video_arrow"><img src="images/seta_video.png"></div>
-</div>
-   <div class="wrapper_wrapper" id="wrapper_wrapper_school_id">
-     <div class="video_title">Skyland Highschool</div>
-     <div class="video_wrapper">
-       <iframe
-        src="https://player.vimeo.com/video/225001757?title=0&byline=0&background=1"
-        frameborder="0" width="200" height="112" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    </div>
-    <div class="video_arrow"><img src="images/seta_video.png"></div>
-  </div>
-    <div class="wrapper_wrapper" id="wrapper_wrapper_shootingrange_id">
-      <div class="video_title">Shooting Range</div>
-      <div class="video_wrapper">
-        <iframe
-         src="https://player.vimeo.com/video/226357094?title=0&byline=0&background=1"
-         frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-     </div>
-     <div class="video_arrow"><img src="images/seta_video.png"></div>
-   </div>
-   <div class="wrapper_wrapper" id="wrapper_wrapper_gym_id">
-     <div class="video_title">Gym</div>
 
-     <div class="video_wrapper">
-       <iframe
-        src="https://player.vimeo.com/video/225001970?title=0&byline=0&background=1"
-        frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    </div>
-    <div class="video_arrow"><img src="images/seta_video.png"></div>
-  </div>
-  <div class="wrapper_wrapper" id="wrapper_wrapper_retirement_id">
-    <div class="video_title">Retirement Home</div>
 
-    <div class="video_wrapper">
-      <iframe
-       src="https://player.vimeo.com/video/225002041?title=0&byline=0&background=1"
-       frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-   </div>
-   <div class="video_arrow"><img src="images/seta_video.png"></div>
- </div>
- <div class="wrapper_wrapper" id="wrapper_wrapper_rodeo_id">
-   <div class="video_title">Rodeo</div>
 
-   <div class="video_wrapper">
-     <iframe
-      src="https://player.vimeo.com/video/226364472?title=0&byline=0&background=1"
-      frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  </div>
-  <div class="video_arrow"><img src="images/seta_video.png"></div>
-</div>
-<div class="wrapper_wrapper" id="wrapper_wrapper_westernpark_id">
-  <div class="video_title">Western Park</div>
-  <div class="video_wrapper">
+
+
+<div class="wrapper_wrapper" id="wrapper_vimeo_id">
+  <div class="video_title" id="video_title_id">Western Park</div>
+  <div class="video_wrapper" id="video_wrapper_id">
     <iframe
-     src="https://player.vimeo.com/video/226354643?title=0&byline=0&background=1"
+     src="https://player.vimeo.com/video/226354643?title=0&byline=0&background=1" id="vimeo_id"
      frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
  </div>
  <div class="video_arrow"><img src="images/seta_video.png"></div>
@@ -153,7 +38,7 @@
   <div class="fronteira_arrow"><img src="images/seta_fronteira.png"></div>
 </div>
 <div class="wrapper_fronteira" id="wrapper_wrapper_fronteira_id">
-<iframe src="https://player.vimeo.com/video/226354838?autoplay=1&title=0&byline=0&portrait=0"
+<iframe src="https://player.vimeo.com/video/226354838?autoplay=1&title=0&byline=0&portrait=0" id="video_fronteira"
 width="800" height="340" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 </div>
