won't let confirm if no box is selected

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Arizona</title>
 <link rel="stylesheet" type="text/css" href="css/index.css">
-<link href="https://fonts.googleapis.com/css?family=family=Heebo|Droid+Serif|Oswald:normal,bold" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
 
 <script src="form.js"></script>
 </head>
@@ -22,7 +22,7 @@
   <input type="hidden" id="question_8" name="question_8" value="-1">
 
   <div class="grid-container">
-    <div class="form-header"> <span class="futura-18">Mesa, </span><span  class="georgia-18"><i>Arizona</i></span></div>
+    <div class="form-header"> <span class="futura-18-bold">Mesa, </span><span  class="futura-18-bold">ARIZONA</span></div>
     <div class="form-left" id="form-left-0"><span id="question-count" class="futura-22-bold">1</span>
       <span class="futura-22-bold ">/ 9</span><br>
         <span id="question" class="futura-22-bold ">Qual é a sua idade?</span>
@@ -65,7 +65,8 @@
     </div>
 
 
-    <div class="confirma" onclick="confirm();" ><span class="futura-18-bold">CONFIRMA >></span></div>
+    <div class="confirma" onclick="confirm();" ><span class="futura-18-bold" id>CONFIRMA >></span>
+    <span class="georgia-14 hidden" id="nothing_selected_id"><br>Por favor selecione ao menos uma opção</span></div>
      </div>
 
   </div>
